# CAFA-5-MLOps-solution

./: .dockerignore  .gitignore  Dockerfile  MLOps-Proposal.odt  Makefile  README.md  compose.embedding-api.yml  docker-compose.yml  pyproject.toml  requirements.txt
configs/: config.yaml
docker/docker_embedding/: .dockerignore  Dockerfile.embedding-api  Dockerfile.embedding-cli
docker/docker_go_term/: Dockerfile.api  Dockerfile.txt  compose.api.yml  docker-compose.yml  dockerignore.txt
docker/docker_streamlit/: Dockerfile.streamlit
docker/docker_training/: Dockerfile.training
examples/: small_sequences.fasta
mlruns/255173932125956343/: meta.yaml
mlruns/255173932125956343/1612bbfdc1974a71be1ca0d6e5886374/: meta.yaml
mlruns/263971441955641515/: meta.yaml
mlruns/517031577875195810/: meta.yaml
monitoring/: README.md  alerts.yml  prometheus.yml
nginx/: README.md  nginx.conf
notes/: CAFA5_paper_presentation_notes.md
scripts/: embed_sequences.py  evaluate_holdout.py  preprocess.py  promote_model.py  retrain_pipeline.py  serve.py  smoke_embedding_api.sh  split_train_holdout.py  train.py
services/embedding-api/: README.md  artifacts.py  config.py  embedder.py  job_store.py  main.py  schemas.py  worker.py
services/go-prediction-api/: local_test.py  main.py  mlflow_logger.py  model_loader.py  predictor_service.py  schemas.py
services/streamlit-ui/: README.md  app.py
services/training-api/: README.md  config.py  job_store.py  main.py  schemas.py  worker.py
src/: config.py  utils.py
src/api/: app.py  esm_embedder.py  schemas.py
src/inference/: predictor.py
src/preprocess/: dataset.py  preprocessing.py
tests/: conftest.py  test_api.py  test_config.py  test_dataset.py  test_models.py  test_preprocessing.py
(+163 files in other folders)
